# civit-ai-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml
docs/: usage.md
docs/superpowers/plans/: 2026-06-16-civitai-cli.md
docs/superpowers/specs/: 2026-06-16-civitai-cli-design.md
scripts/: gen_screenshots.py
src/civitai_hub/: __init__.py  cache.py  cli.py  client.py  config.py  download.py  errors.py  models.py  render.py  resolver.py  urls.py
tests/: conftest.py  test_cache.py  test_cli.py  test_client.py  test_config.py  test_download.py  test_errors.py  test_live.py  test_mirror.py  test_models.py  test_public_api.py  test_render.py  test_resolver.py  test_smoke.py  test_urls.py  test_v030.py
