[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civitai-hub"
version = "0.1.0"
description = "huggingface_hub but for CivitAI — inspect and download models/LoRAs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.15",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
civitai = "civitai_hub.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/civitai_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
