[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civitai-hub"
dynamic = ["version"]
description = "huggingface_hub but for CivitAI — inspect and download models/LoRAs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Artemiy Mazaew" }]
keywords = ["civitai", "huggingface_hub", "stable-diffusion", "lora", "checkpoint", "cli", "download"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.15",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.urls]
# Update these to your actual repository before publishing.
Homepage = "https://github.com/mr8bit/civit-ai-cli"
Repository = "https://github.com/mr8bit/civit-ai-cli"
Issues = "https://github.com/mr8bit/civit-ai-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
civitai = "civitai_hub.cli:app"

# Single source of truth for the version: derived from src/civitai_hub/__init__.py
[tool.hatch.version]
path = "src/civitai_hub/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/civitai_hub"]

# Keep dev cruft out of the PyPI sdist.
[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs", "/scripts", "/CLAUDE.md", "/.dockerignore", "/Dockerfile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
